--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,8 +3,7 @@
     justify-content: center;
     align-items: center;
     min-height: 90vh;
-    margin-top: 90px;
-    margin: 30px;
+    margin-top: 40px;
     margin-bottom: 0;
     gap: 20px;
 }
@@ -33,16 +32,16 @@
 
 
 
-
-
-
 @media screen and (max-width:760px) {
     .about {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         flex-wrap: wrap;
-        margin-bottom: 10px;
-        flex-direction: column;
-        gap: 10px;
-        margin-top: 0px;
-        margin: 0px;
+        width: 100%;
+     
+    }
+    .about-img-container {
+        width: 80%;
     }
 }
